# barravips

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  pesquisa.md  pytest.ini  skills-lock.json
.claude/: settings.local.json
.playwright-mcp/: page-2026-04-22T01-08-44-478Z.yml  page-2026-04-22T01-11-41-616Z.yml  page-2026-04-22T13-39-05-912Z.yml  page-2026-04-22T21-34-20-267Z.yml  page-2026-04-22T21-34-56-317Z.yml  page-2026-04-22T22-23-30-469Z.yml  page-2026-04-23T19-23-50-685Z.yml  page-2026-04-23T19-27-05-237Z.yml  page-2026-04-23T20-30-51-422Z.yml
apps/api/: README.md  pyproject.toml
apps/api/scripts/: smoke_api.py
apps/api/src/barra_vips_api/: __init__.py  config.py  db.py  evolution_client.py  main.py  media.py  qr_buffer.py
apps/operator-web/: .env.example  .gitignore  DESIGN.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts
db/: README.md
db/migrations/: 001_init_schemas.sql  002_init_app_tables.sql  003_simplify_media.sql  004_media_tag_vocabulary_acompanhantes.sql  005_normalize_escorts.sql  006_inline_escort_singletons.sql  007_inline_escort_location.sql  008_inline_media_tags.sql
db/seeds/: 001_dev_fixture.sql
docs/: fase-1-setup.md  fase-2-conclusao.md  fase-3-operator-web.md  fase4.md  referencia-dados-postgres-interface.md  roadmap-executavel-mvp.md
docs/contexto/: 00-visao-geral-e-onboarding.md  01-escopo-mvp-e-roadmap.md  02-regras-de-negocio-e-operacao.md  INDEX.md  (+10 more)
infra/: docker-compose.dev.yml
scripts/: dev_down.ps1  dev_down.sh  dev_up.ps1  dev_up.sh
tests/: conftest.py  helpers.py
(+126 files in other folders)
